completed the mvp with task 2 testing as expected.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title>JS Countries</title>
 </head>
 <body>
-    <h1></h1>
-    <section id="section 1"></section>
+    <h1>Countries</h1>
+    <section id="countries"></section>
+    <p></p>
 </body>
 </html>
 
